# compiler

./: Cargo.toml  Makefile
design/: FRONTEND.md
frontend/: Cargo.toml
frontend/src/: ast.rs  grammer.lalrpop  lib.rs  parsing.rs  pratt.rs  srcfile.rs  token.rs
frontend/src/parser/: ast.rs  function_parser.rs  mod.rs
frontend/test_files/: test1.snake
middle/: Cargo.toml
middle/src/: lib.rs  typechecking.rs
