[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[build-dependencies] # <-- We added this and everything after!
lalrpop = "0.19.9"


[dependencies]
lalrpop-util = "0.19.9"
regex = "1"

[dev-dependencies]
stacker = "0.1.15"



